# norn-ett-instance

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
dbt/: dbt_project.yml  profiles.yml
dbt/models/: actual_vs_forecast.sql  backtest_point.sql  calibration.sql  fct_ot.sql  feature_leads.sql  mart_metric.sql  schema.yml  sources.yml
deploy/: .env.example  crontab.sample  jobs.yml
forecasts/: ot_baseline.yml  ot_timesfm.yml  ot_timesfm_xreg.yml
src/norn_ett/: __init__.py  cli.py  clickhouse.py  github.py  ingest.py
tests/: conftest.py  test_cli.py  test_clickhouse.py  test_dbt_models.py  test_forecast_jobs.py  test_github.py  test_imports.py  test_ingest.py
