[project]
name = "norn-ett"
version = "0.0.0"
requires-python = ">=3.12"
description = "norn ETT instance — Electricity Transformer Temperature ingestion + ett dbt"
dependencies = ["httpx>=0.27", "clickhouse-connect>=0.7", "typer>=0.12"]

[project.scripts]
ett = "norn_ett.cli:app"

[dependency-groups]
dev = ["pytest>=8.0", "pyyaml>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/norn_ett"]

[tool.pytest.ini_options]
testpaths = ["tests"]
